@@ -1,5 +1,7 @@
 *SVN*
 
+* Calculations support non-numeric foreign keys.  #8154 [kamal]
+
 * with_scope is protected.  #8524 [Josh Peek]
 
 * Quickref for association methods.  #7723 [marclove, Mindsweeper]
